--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "peerDependencies": {
     "react-native": "*",
     "react-native-vector-icons": "^2.1.0",
-    "react-native-video": "^0.9.0"
+    "react-native-video": "^0.9.0",
+    "react-native-material-kit": "^0.3.3"
   },
   "devDependencies": {
     "eslint": "^3.4.0",
